<resources>
    <string name="app_name" translatable="false">DDB</string>
    <string name="enter_id">Your phone</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_night">Good night!</string>
    <string name="good_evning">Good evning!</string>
    <string name="enter_id_exp">Can we have your number?</string>
    <string name="phone_or_id">Phone or ID</string>
    <string name="login">Log in</string>
    <string name="sign_in">Come here often? lets open an account!</string>
    <string name="enter_password">Password</string>
    <string name="phone_number_error">Should we try a real account?</string>
    <string name="blessing_1">Glad you back,</string>
    <string name="blessing_2">Good to see you,</string>
    <string name="blessing_3">Hello there,</string>
    <string name="log_out">Allready going?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="done">I\'m done!</string>
    <string name="choose_user">Lets choose a recipent!</string>
    <string name="enter_number_recipent">How will be the lucky one to get the parcel?</string>
    <string name="envelope">It,s a envelope</string>
    <string name="small_package">It\'s a small package</string>
    <string name="large_package">It\'s a large package</string>
    <string name="parcel_data">What do you have there?</string>
    <string name="enter_the_parcel_data">Lets play a little guessing game...</string>
    <string name="parcel_added">The parcel is now registered!</string>
    <string name="no_internet_connection">Where are you? It\'s look like you dont have internet connection</string>
    <string name="try_agian_later">Should we try agian later?</string>
    <string name="title_activity_main_screen_company">MainScreenCompany</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="envelope_">Envelope</string>
    <string name="small_package_">Small Package</string>
    <string name="large_package_">Large Package</string>
    <string name="gps_is_off">Your GPS is off. Turn it up to let us know where you are automatcally.</string>
    <string name="where_are_you">Where are you?</string>
    <string name="hope_you_have_room">Choose a warehouse that has enough space for parcel...</string>
    <string name="wrong_phone_number">Unsupported phone number</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="previous">Previous</string>
    <string name="got_it">Got it!</string>
    <string name="empty_fields">Look like you forgot to fill all the necessary info or some of them contain worng data. Fill them and come back later?</string>
    <string name="delete">Delete</string>
    <string name="forgot_your_password">Look like you forgot yor password...?</string>
    <string name="all_your_parcels">Here is a list of all of your\'s parcel:</string>
    <string name="enter_your_password">Can you tell us your secret password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_love_new_members">We love new members. We are so haapy you want to join to our app!</string>
    <string name="sign_up_intro">Before we can let you use are app we have to learn more about you and your company.\nSo what do you say? Would you give us your name and mail and we will be in touch?</string>
    <string name="your_email">Your email</string>
    <string name="your_name">Your name</string>
    <string name="im_in">Im in, Sign me up</string>
    <string name="we_got_your_details">Congratulations! We got your details.\nWe will be in touch as soon as possible.</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="share_or_print">What do you like to do with the OR code of this parcel?</string>
    <string name="share_to">How do you want to share this QR code?</string>
    <string name="delete_parcel">Are you sure you want to delete this parcel?</string>
    <string name="cancel">Cancel</string>
</resources>
