<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_back1"
    android:orientation="vertical"
    tools:context=".UI.SignUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130pt"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/sign_up"
            android:textColor="#EEFFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/we_love_new_members"
            android:textAlignment="center"
            android:textColor="#EEFFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/half_circle"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:padding="20dp"
            android:text="@string/sign_up_intro"
            android:textAlignment="center"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/my_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/my_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <Button
            android:id="@+id/send_mail_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_style_regular"
            android:padding="15dp"
            android:text="@string/im_in"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>