<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F5F5F5"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="10pt"
    android:rotationY="180"
    tools:context=".UI.AddParcelProcces.AddParcelFragment1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/choose_user" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/enter_number_recipent" />

    <EditText
        android:id="@+id/recipient_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textDirection="ltr"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_or_id"
        android:background="@drawable/edit_text_style_light"
        android:padding="10dp"
        android:gravity="center"
        android:layout_margin="7dp"/>
</LinearLayout>